# Rustiny

./: Cargo.toml  README.md
src/: api.rs  lib.rs
src/api/: ApiClient.rs  DestinyAPI.rs  Util.rs  mod.rs  user.rs
src/api/activity/: activity.rs
src/api/clan/: Clan.rs  mod.rs
src/api/items/: item.rs
src/api/manifest/: manifest.rs
src/api/oauth/: oauth.rs
src/api/user/: BungieUser.rs  DestinyCharacter.rs  mod.rs
src/macros/: Cargo.toml
src/macros/src/: lib.rs
