[package]
name = "Rustiny"
version = "0.1.11"
edition = "2021"
license = "MIT"
description = "A wrapper for the Destiny 2 / Bungie.net REST API"
homepage = "https://github.com/dec4234/Rustiny"
documentation = "https://github.com/dec4234/Rustiny"
repository = "https://github.com/dec4234/Rustiny"
readme = "README.md"
exclude = [".github/*"]
keywords = ["destiny2", "wrapper", "api", "destiny", "bungie"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.14.0", features = ["full"] }
chrono = "0.4.19"
strum = { version = "0.24", features = ["derive"] }